--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "dev": "npx serve ."
+    "dev": "npx serve . --open /app.html"
   },
   "devDependencies": {
     "eslint": "^9.0.0"
