--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "dev": "npx serve ."
   },
   "devDependencies": {
-    "eslint": "^9.0.0"
+    "concurrently": "^9.2.1",
+    "eslint": "^9.0.0",
+    "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   }
 }
