--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "dev": "npx serve ."
+    "dev": "concurrently \"npm run dev:ui\" \"npm run dev:api\"",
+    "dev:ui": "vite --port 3000",
+    "dev:api": "nodemon server/server.mjs"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
