--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "eslint": "^9.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
