--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:ui": "npx vite --port 3000",
     "dev:api": "nodemon server/server.mjs",
 
-    "build": "vite build",
+    "build": "npx vite build",
     "start": "node server/server.mjs"
   },
   "devDependencies": {
